Fix mobile menu alignment

--- a/client/src/assets/styles/components/global.pcss
+++ b/client/src/assets/styles/components/global.pcss
@@ -33,7 +33,8 @@ main.wrapper {
 }
 
 #hamburger-wrapper input:checked ~ nav {
-  display: flex;
+  visibility: visible;
+  opacity: 1;
 }
 
 div.sm-selector-container .domain-selector {
